<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6dee7"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/all_fields_layout"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_weight="1.15"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separate_list_items"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:elevation="19dp"
                app:srcCompat="@mipmap/icon_pic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separate_list_items"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.84"
                app:srcCompat="@mipmap/item_user_image" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="272dp"
                android:layout_height="match_parent"
                android:layout_weight="0.06">

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:foregroundTint="@color/colorPrimary"
                    android:hint="@string/name_fild"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separate_list_items"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/icon_at" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="275dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separate_list_items"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/icon_phone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_number"
                android:layout_width="277dp"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/phone_field"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rfid_field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separate_list_items"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/img_user_rfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.88"
                app:srcCompat="@mipmap/icon_rfid_2" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_rfid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_weight="0.40">

                <EditText
                    android:id="@+id/rfid_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="RFID"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/rfid_add_user_button"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1.02"
                android:background="@android:color/transparent"
                android:elevation="11dp"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_next_rfid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTab"
            android:backgroundTint="@color/colorTab"
            android:text="@string/add_next_step"
            app:srcCompat="@color/colorTab" />

    </LinearLayout>

</LinearLayout>